...

            // Inject transparency CSS
            if (forceTransparent) {
                cdp.sendAsync("Runtime.evaluate", buildJsonObject {
                    put(
                        "expression",
                        "document.documentElement.style.background='transparent';" +
                            "document.body.style.background='transparent';"
                    )
                })
            }
            if (customCss.isNotBlank()) {
                cdp.sendAsync("Runtime.evaluate", buildJsonObject {
...
